Создано с помощью Colaboratory

--- a/Untitled7.ipynb
+++ b/Untitled7.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM0Mro3bscx8AAcorwRzRQ/",
+      "authorship_tag": "ABX9TyP7I6X+SuQs9Gc+Pi0bwNo8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7408,6 +7408,17 @@
     {
       "cell_type": "code",
       "source": [
+        "# После анализа данных по рекомендуемым ссылкам, принято решение использовать более полный (до 2021 года) датасет с kaggle.com"
+      ],
+      "metadata": {
+        "id": "vWYM43--FGMV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "data1=pd.read_csv('Global Economy Indicators.csv')\n",
         "data1"
       ],
@@ -8267,6 +8278,17 @@
           "execution_count": 53
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Отбрираем ии группируем данные"
+      ],
+      "metadata": {
+        "id": "3b3Bj_KFFqOC"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -9151,6 +9173,17 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Т.к. в прошлом примере компания с наибольшей капитализацией вышла на IPO только в 2021 году, отбираем более старые компании из данного сектора для расчета индекса."
+      ],
+      "metadata": {
+        "id": "onQnToEkFkp_"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -19038,12 +19071,12 @@
         "df_US"
       ],
       "metadata": {
-        "id": "AVUH0GoxCko2",
-        "outputId": "f3a7c3db-45c8-4209-bf00-1648132f49c0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 441
-        }
+        },
+        "id": "AVUH0GoxCko2",
+        "outputId": "f3a7c3db-45c8-4209-bf00-1648132f49c0"
       },
       "execution_count": 280,
       "outputs": [
@@ -19470,12 +19503,12 @@
         "df_US"
       ],
       "metadata": {
-        "id": "dKozjq-KBuX_",
-        "outputId": "03ab212f-665f-4320-fbc5-f5a5175c27be",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "dKozjq-KBuX_",
+        "outputId": "03ab212f-665f-4320-fbc5-f5a5175c27be"
       },
       "execution_count": 282,
       "outputs": [
@@ -20432,12 +20465,12 @@
         "df_US.plot()"
       ],
       "metadata": {
-        "id": "nJeWW7MBDMib",
-        "outputId": "2a5e21d3-fd72-47f3-e943-3d99ce5dfa95",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 483
-        }
+        },
+        "id": "nJeWW7MBDMib",
+        "outputId": "2a5e21d3-fd72-47f3-e943-3d99ce5dfa95"
       },
       "execution_count": 289,
       "outputs": [
@@ -20483,12 +20516,12 @@
         "ax2.tick_params(axis ='y', labelcolor = 'forestgreen')"
       ],
       "metadata": {
-        "id": "QBRxFBRdDxnI",
-        "outputId": "65c63070-8e9c-46e1-fd63-b0f8b8aca205",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 465
-        }
+        },
+        "id": "QBRxFBRdDxnI",
+        "outputId": "65c63070-8e9c-46e1-fd63-b0f8b8aca205"
       },
       "execution_count": 292,
       "outputs": [
@@ -20506,9 +20539,20 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#Задание 9. Сделать предсказание курса акций с помощью модели ARIMA, на следующие две недели. Подобрать наилучшие параметры модели."
+      ],
       "metadata": {
         "id": "2A0sFWqKCziq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "moZ2a10wE1XV"
       },
       "execution_count": null,
       "outputs": []
