Создано с помощью Colaboratory

--- a/Untitled7.ipynb
+++ b/Untitled7.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP/mtDMSZQDEZ6ULb9qeqea",
+      "authorship_tag": "ABX9TyPsi0Igs8xLqV9TbnDRseV0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3326,6 +3326,17 @@
     {
       "cell_type": "code",
       "source": [
+        "# Т.к. данные по случайно выбоанной компании отсутствуют, выбираем другую из того же сектора - OLPX"
+      ],
+      "metadata": {
+        "id": "b2QY2ELJ3cn1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "stock_prices=yf.download(tickers='OLPX', period='1500d',interval='1d',group_by='column')\n"
       ],
       "metadata": {
@@ -3862,6 +3873,17 @@
         "id": "BG7AzWNq25a_"
       },
       "execution_count": 32,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Выбираем 10 крупнейших компаний"
+      ],
+      "metadata": {
+        "id": "qdjpGLVS355d"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5293,6 +5315,17 @@
           "execution_count": 37
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Видим, что данные выгрузились по времени обращения OLPX на бирже, несмотря на запрос данных за период 3650 дней"
+      ],
+      "metadata": {
+        "id": "iOL6x8YA4NM0"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -6766,6 +6799,17 @@
     {
       "cell_type": "code",
       "source": [
+        "# Добавляем рассчитанные значения индекса в датафрейм"
+      ],
+      "metadata": {
+        "id": "lPS1Nwfs4rpr"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "prices['Period_Index']=period_index"
       ],
       "metadata": {
@@ -7277,6 +7321,17 @@
     {
       "cell_type": "code",
       "source": [
+        "# Строим график, для сравнения берем ущу одну компанию - CASY"
+      ],
+      "metadata": {
+        "id": "yXyDtUoe5Jdn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "prices['OLPX'].plot()\n",
         "prices['CASY'].plot()\n",
         "prices['Period_Index'].plot()\n",
@@ -7304,6 +7359,17 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Из-за разного масштаба график не очень наглядный, перестраиваем с дополнительной осью Y"
+      ],
+      "metadata": {
+        "id": "xct71uzH5YXS"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
