Создано с помощью Colaboratory

--- a/Untitled11.ipynb
+++ b/Untitled11.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMw5vvqKVMbxF6imblGRI4G",
+      "authorship_tag": "ABX9TyNJODXEwU9JV4WcBMhFfm2n",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7662,6 +7662,34 @@
     {
       "cell_type": "code",
       "source": [
+        "data['class'].value_counts()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3MDqDcIXGr2J",
+        "outputId": "6dce84b5-786f-4b9c-ce9b-d7426a09fc59"
+      },
+      "execution_count": 107,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              " <=50K    24720\n",
+              " >50K      7841\n",
+              "Name: class, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 107
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "data['fnlwgt'].value_counts()"
       ],
       "metadata": {
@@ -7699,27 +7727,32 @@
     {
       "cell_type": "code",
       "source": [
-        "data['capital-gain'][data['capital-gain']>50000].value_counts()"
+        "data['capital-gain'][data['capital-gain']>25000].value_counts()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "4T4DBR8aFM12",
-        "outputId": "b7c78d55-a69b-499e-aa88-e34b54c3fc82"
+        "outputId": "c5740396-c279-40a0-90fd-067040577aeb"
       },
-      "execution_count": 105,
+      "execution_count": 106,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "99999    159\n",
+              "27828     34\n",
+              "25236     11\n",
+              "34095      5\n",
+              "25124      4\n",
+              "41310      2\n",
               "Name: capital-gain, dtype: int64"
             ]
           },
           "metadata": {},
-          "execution_count": 105
+          "execution_count": 106
         }
       ]
     },
